--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 .navbar-custom {
   background: #ffffff;
+  box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2), 0 5px 15px 0 rgba(0, 0, 0, 0.1);
   letter-spacing: 0.5px;
   padding: 0px;
 }
@@ -10,6 +11,14 @@
 
 .navbar-brand img {
   height: 62px;
+}
+
+.jumbotron {
+  margin-top: 62px;
+}
+
+.submission-form {
+  margin-top: 80px;
 }
 
 .map {
