--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1062,3 +1062,16 @@
   margin-top: 80px;
 }
 
+.button-back {
+  background-color: white;
+  border: 1px solid #9e9e9e;
+  color: #ff6f00;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 50px;
+}
+
